--- a/www/index.html
+++ b/www/index.html
@@ -8,11 +8,14 @@
 
     <script src="http://code.angularjs.org/1.2.13/angular.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.js"></script>
+
     <script src="app/app.js"></script>
     <script src="app/controllers/login_controller.js"></script>
     <script src="app/controllers/userList_controller.js"></script>
     <script src="app/controllers/bookList_controller.js"></script>
     <script src="app/controllers/addBook_controller.js"></script>
+    <script src="app/controllers/signup_controller.js"></script>
 
 </head>
 
